Web Api controller is hit twice on single request

--- a/AspireApp1.Web/Components/Layout/NavMenu.razor
+++ b/AspireApp1.Web/Components/Layout/NavMenu.razor
@@ -21,14 +21,21 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weatherGet">
-                <span class="bi bi-list-nested" aria-hidden="true"></span> Weather From HttpGet
+            <NavLink class="nav-link" href="weather">
+                <span class="bi bi-list-nested" aria-hidden="true"></span> Weather 
+            </NavLink>
+        </div>
+
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="minimalAPiWorks">
+                <span class="bi bi-list-nested" aria-hidden="true"></span> minimalAPiWorks
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weatherPost">
-                <span class="bi bi-list-nested" aria-hidden="true"></span> Weather From HttpPost
+            <NavLink class="nav-link" href="regularAPiWorksNot">
+                <span class="bi bi-list-nested" aria-hidden="true"></span> regularAPiWorksNot
             </NavLink>
         </div>
     </nav>
