--- a/AspireApp1.Web/Components/Pages/SecondAPIminimalWorks.razor
+++ b/AspireApp1.Web/Components/Pages/SecondAPIminimalWorks.razor
@@ -1,10 +1,10 @@
-﻿@page "/weatherGet"
+﻿@page "/minimalApiWorks"
 @attribute [StreamRendering(true)]
 @attribute [OutputCache(Duration = 5)]
 
-@inject WeatherApiClient WeatherApi
+@inject WeatherStatisticsClient WeatherApi
 
-<PageTitle>Weather</PageTitle>
+<PageTitle>Weather from statistics</PageTitle>
 
 <h1>Weather</h1>
 
@@ -44,6 +44,6 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        forecasts = await WeatherApi.GetWeatherAsyncHttpGet();
+        forecasts = await WeatherApi.Foobar();
     }
 }
